turn off OS mouseMove events when leaving the view only if our superview is not one of ours (r=pink/sr=sfraser), bug 204024